Remove button highlighting for promo bubbles.

Highlighting was previously added to buttons with anchored widgets. This is not the desired effect for promo buttons. This change makes the highlighted function overridable and removes the button highlight for the feature promo bubbles.

Bug: 888462
Change-Id: I79077bf9e7f30543eee6ae87db0785e9a0e08051
Reviewed-on: https://chromium-review.googlesource.com/1246144
Commit-Queue: Caroline Rising <corising@chromium.org>
Reviewed-by: Trent Apted <tapted@chromium.org>
Cr-Commit-Position: refs/heads/master@{#595164}
Former-commit-id: aff37c6252d7af8604e1d90e08cc914a057a38b9